--- a/Stop watch/styles.css
+++ b/Stop watch/styles.css
@@ -1,11 +1,13 @@
 body {
-    background: #fff;
+   
+    background-image: url(./pexels-kawaiiart-1767434.jpg);
+    background-size: cover;
 }
 
 .stopwatch {
     width: 90%;
     max-width: 600px;
-    background: rgba(255, 0, 0, 0.342);
+    background: rgba(255, 0, 0, 0);
     background-size: cover;
     background-position: center;
     text-align: center;
@@ -18,7 +20,7 @@ body {
 button {
     padding: 10px;
     border-radius: 50%;
-    background-color: rgba(255, 0, 0, 0.138);
+    background-color: black;
     margin: 10px;
 
 }
