--- a/Dark-Mode/styles.css
+++ b/Dark-Mode/styles.css
@@ -10,22 +10,22 @@ body {
 
 button {
     padding: 10px;
-    background-color: #333;
-    color: #fff;
     border: 0;
     outline: 0;
     border-radius: 5px;
     padding: 10px 25px;
     font-weight: 600;
     transition: background-color 0.4s ease;
+    background-color: #333;
+    color: #fff;
 }
 
-.btncolor {
+.btncolor1 {
     background-color: #fff;
     color: #333;
 }
 
-.dark-mode {
-    background-color: #222;
+.btncolor2 {
+    background-color: #333;
     color: #fff;
 }
