--- a/Dark-Mode/styles.css
+++ b/Dark-Mode/styles.css
@@ -1,31 +1,140 @@
-body {
-    transition: background-color 0.4s ease;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* // dark mode */
+:root {
+    --primary-colo: #edf2fc;
+    --secondary-color: #212121;
+}
+
+.dark-theme {
+
+    --primary-colo: #000106;
+    --secondary-color: #fff;
+
+}
+
+#icon {
+    width: 30px;
+    cursor: pointer;
+
+}
+
+nav ul {
+    flex: 1;
+    text-align: right;
+}
+
+.hero {
+    height: 100vh;
+    width: 100%;
+    background: var(--primary-colo);
+    position: relative;
+}
+
+nav {
+    width: 84%;
+    margin: auto;
+    padding: 20px 0;
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin-top: 300px;
-    background-color: #fff;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 100px;
+    cursor: pointer;
+}
+
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: var(--secondary-color);
+}
+
+nav ul li a:hover {
+    color: #ff4321;
+}
+
+.info {
+    margin-left: 8%;
+    margin-top: 15%;
+}
+
+.info h1 {
+    font-size: 70px;
+    color: var(--secondary-color);
+    margin-bottom: 20px;
 
 }
 
-button {
-    padding: 10px;
-    border: 0;
-    outline: 0;
+span {
+    color: #ff4321;
+}
+
+.info p {
+    color: var(--secondary-color);
+    line-height: 22px;
+}
+
+.info a {
+    background: var(--secondary-color);
+    padding: 10px 18px;
+    text-decoration: none;
+    color: var(--primary-colo);
+    display: inline-block;
+    margin: 30px 0;
     border-radius: 5px;
-    padding: 10px 25px;
-    font-weight: 600;
-    transition: background-color 0.4s ease;
-    background-color: #333;
-    color: #fff;
+
+
 }
 
-.btncolor1 {
-    background-color: #fff;
-    color: #333;
+.imgBox {
+    width: 45%;
+    height: 80%;
+    position: absolute;
+    bottom: 0;
+    right: 100px;
 }
 
-.btncolor2 {
-    background-color: #333;
-    color: #fff;
+.imgBox img {
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    transition: bottom 1s, left 1s;
+}
+
+.imgBox:hover .backimg {
+    bottom: 40px;
+}
+
+.imgBox:hover .mainimg {
+    left: 54%;
+}
+
+.socialLinks {
+    margin-left: 8%;
+    margin-top: 100px;
+}
+
+.socialLinks a {
+    font-size: 30px;
+    color: var(--secondary-color);
+    margin-right: 20px;
+}
+
+.socialLinks a:hover {
+    color: #ff4321;
+
 }
